@@ -6,3 +6,5 @@ appveyor.yml
 ^codecov\.yml$
 ^revdep$
 ^.github$
+README.md
+codecov.yml
